--- a/display/templates/display.html
+++ b/display/templates/display.html
@@ -5,8 +5,8 @@
 
 <div class="flex flex-col items-center font-sans" style="background: linear-gradient(153deg, #F09027 12.76%, #8CBEAA 71.77%);">
     <div id="product_cards"></div>
-    <div class="flex flex-col md:flex-row justify-end mt-4 w-full max-w-7xl p-5">
-      <div class="flex space-x-4 md:space-x-8" style="margin-right: 375px;">
+    <div class="flex flex-col md:flex-row justify-center mt-4 w-full max-w-7xl p-5">
+      <div class="flex space-x-4 md:space-x-8">
           <select id="sortDropdown" class="bg-[#b85c2c] text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:bg-[#b85c2c] hover:scale-101 mt-4">
               <option value="ascending">Sort by Price: Ascending</option>
               <option value="descending">Sort by Price: Descending</option>
