--- a/forum/templates/forum_post.html
+++ b/forum/templates/forum_post.html
@@ -10,7 +10,7 @@
             <div class="flex flex-col min-h-screen py-4 space-y-4">
                 <div class="p-4 bg-white border border-gray-300 rounded-md">
                     <h6 class="flex items-center mb-2 text-xs text-gray-500">
-                        <span>Posted by {{ post.user }}</span>
+                        <span>Diposting oleh {{ post.user }}</span>
                         <span class="mx-1">•</span>
                         <span>{{ post.created_at|date:"d-m-Y" }}</span>
                     </h6>
@@ -21,7 +21,7 @@
                     {% if user_role == "admin" or user_role == "buyer" %}
                         <form id="post-reply-form" action="" method="post" class="space-y-3">
                             <div>
-                                <label for="content" class="sr-only">Reply</label>
+                                <label for="content" class="sr-only">Balasan</label>
                                 <textarea id="content"
                                           name="content"
                                           placeholder="Add a comment"
@@ -30,74 +30,50 @@
                             </div>
                             <button type="submit"
                                     class="w-full px-3 py-1.5 text-base font-medium text-white bg-blue-500 border border-transparent rounded-md shadow-sm hover:bg-blue-700">
-                                Reply
+                                Balas
                             </button>
                         </form>
                     {% endif %}
                 </div>
-                <div id="replies"
-                     class="flex flex-col items-center justify-center flex-grow space-y-3">
-                    {% if not replies %}
-                        <div class="flex flex-col items-center justify-center h-full space-y-8 rounded-lg">
-                            <svg class="w-20"
-                                 viewBox="0 0 16 16"
-                                 xmlns="http://www.w3.org/2000/svg"
-                                 fill="white">
-                                <g id="SVGRepo_bgCarrier" stroke-width="0">
-                                </g>
-                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round">
-                                </g>
-                                <g id="SVGRepo_iconCarrier">
-                                <g fill="white" fill-rule="evenodd" clip-rule="evenodd">
-                                <path d="M8.302 3.288A3.633 3.633 0 002.756 7.76c.124.237.112.49.102.61a2.984 2.984 0 01-.084.468 7.853 7.853 0 01-.2.655c.26-.09.52-.17.75-.223a.7.7 0 11.312 1.365c-.34.078-.837.258-1.278.434a23.211 23.211 0 00-.701.295l-.042.018-.01.005-.003.001a.7.7 0 01-.925-.927v-.001l.002-.004.008-.018.03-.07a21.252 21.252 0 00.43-1.047c.113-.3.211-.592.27-.822.021-.09.034-.157.041-.205a5.033 5.033 0 017.74-6.082.7.7 0 01-.896 1.076zM1.463 8.226v0z">
-                                </path>
-                                <path d="M4.75 9.333a5.083 5.083 0 119.657 2.221c.006.033.015.077.029.133.05.197.14.453.248.734.087.223.178.443.262.646l.06.146c.049.118.094.23.131.326.03.082.074.2.097.306a.75.75 0 01-.734.905c-.169 0-.332-.04-.447-.072a4.867 4.867 0 01-.394-.134c-.188-.072-.402-.162-.606-.248l-.216-.09a7.634 7.634 0 00-.705-.265 1.739 1.739 0 00-.095-.026A5.083 5.083 0 014.75 9.333zm1.5 0a3.583 3.583 0 116.763 1.654c-.124.239-.12.485-.11.614.01.155.043.313.08.456.054.214.132.448.216.676a7.37 7.37 0 00-.643-.231 2.456 2.456 0 00-.443-.093 1.113 1.113 0 00-.626.104 3.583 3.583 0 01-5.237-3.18zm8.15 2.16l-.001-.012v.013z">
-                                </path>
-                                </g>
-                                </g>
-                            </svg>
-                            <h3 class="font-sans text-xl font-semibold text-gray-200">forum is empty</h3>
+                <div id="replies" class="flex-grow space-y-3">
+                    {% for reply in replies %}
+                        <div class="space-y-2.5 p-4 border bg-white border-gray-200 rounded-md post-reply-card"
+                             data-reply-id="{{ reply.id }}">
+                            <h6 class="flex items-center text-xs text-gray-500">
+                                <span class="font-bold text-black">{{ reply.user }}</span>
+                                <span class="mx-1">•</span>
+                                <span>{{ reply.created_at|date:"d-m-Y" }}</span>
+                                {% if user.username == reply.user.username %}
+                                    <div class="relative ml-auto">
+                                        <button class="inline-flex items-center px-2 py-2 text-gray-700 dropdown-button hover:bg-gray-300 focus:outline-none"
+                                                aria-haspopup="true"
+                                                aria-expanded="false">
+                                            <svg class="w-3 h-3 text-gray-600"
+                                                 xmlns="http://www.w3.org/2000/svg"
+                                                 fill="none"
+                                                 viewBox="0 0 24 24"
+                                                 stroke="currentColor">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                                            </svg>
+                                        </button>
+                                        <ul class="absolute right-0 z-10 hidden w-40 mt-2 bg-white rounded-md shadow-lg dropdown-menu">
+                                            <li>
+                                                <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 dropdown-item edit-reply-btn hover:bg-gray-100">
+                                                    Ubah
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 dropdown-item hover:bg-gray-100 delete-reply-btn">
+                                                    Hapus
+                                                </button>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                {% endif %}
+                            </h6>
+                            <p class="text-gray-800 post-reply-card-content">{{ reply.content }}</p>
                         </div>
-                    {% else %}
-                        {% for reply in replies %}
-                            <div class="space-y-2.5 p-4 border bg-white border-gray-200 rounded-md post-reply-card"
-                                 data-reply-id="{{ reply.id }}">
-                                <h6 class="flex items-center text-xs text-gray-500">
-                                    <span class="font-bold text-black">{{ reply.user }}</span>
-                                    <span class="mx-1">•</span>
-                                    <span>{{ reply.created_at|date:"d-m-Y" }}</span>
-                                    {% if user.username == reply.user.username %}
-                                        <div class="relative ml-auto">
-                                            <button class="inline-flex items-center px-2 py-2 text-gray-700 dropdown-button hover:bg-gray-300 focus:outline-none"
-                                                    aria-haspopup="true"
-                                                    aria-expanded="false">
-                                                <svg class="w-3 h-3 text-gray-600"
-                                                     xmlns="http://www.w3.org/2000/svg"
-                                                     fill="none"
-                                                     viewBox="0 0 24 24"
-                                                     stroke="currentColor">
-                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-                                                </svg>
-                                            </button>
-                                            <ul class="absolute right-0 z-10 hidden w-40 mt-2 bg-white rounded-md shadow-lg dropdown-menu">
-                                                <li>
-                                                    <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 dropdown-item edit-reply-btn hover:bg-gray-100">
-                                                        Edit
-                                                    </button>
-                                                </li>
-                                                <li>
-                                                    <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 dropdown-item hover:bg-gray-100 delete-reply-btn">
-                                                        Delete
-                                                    </button>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    {% endif %}
-                                </h6>
-                                <p class="text-gray-800 post-reply-card-content">{{ reply.content }}</p>
-                            </div>
-                        {% endfor %}
-                    {% endif %}
+                    {% endfor %}
                 </div>
             </div>
         </div>
@@ -109,11 +85,11 @@
             <!-- Modal Content -->
             <div class="relative z-10 w-full max-w-lg mx-4 bg-white shadow-lg rounded-xl">
                 <div class="flex items-center justify-between p-4 border-b">
-                    <h3 class="font-bold text-gray-800">Edit Reply</h3>
+                    <h3 class="font-bold text-gray-800">Ubah Balasan</h3>
                     <button type="button"
                             class="text-gray-400 hover:text-gray-600"
                             id="edit-reply-modal-close-btn">
-                        <span class="sr-only">Close</span>
+                        <span class="sr-only">Tutup</span>
                         <svg class="w-6 h-6"
                              xmlns="http://www.w3.org/2000/svg"
                              fill="none"
@@ -126,7 +102,7 @@
                 <div class="p-4">
                     <form id="edit-reply-form">
                         <div class="mb-4">
-                            <label for="rep_content" class="block text-sm font-medium text-gray-700">Reply</label>
+                            <label for="rep_content" class="block text-sm font-medium text-gray-700">Balasan</label>
                             <textarea id="rep_content"
                                       name="content"
                                       rows="4"
@@ -139,7 +115,7 @@
                     <button type="submit"
                             form="edit-reply-form"
                             class="px-3 py-2 ml-2 text-sm font-medium text-white bg-blue-600 rounded-lg hover:bg-blue-700 focus:outline-none focus:bg-blue-700">
-                        Save
+                        Ubah
                     </button>
                 </div>
             </div>
@@ -193,10 +169,10 @@
                                 </button>
                                 <ul class="absolute right-0 z-10 hidden w-40 mt-2 bg-white rounded-md shadow-lg dropdown-menu">
                                     <li>
-                                        <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 dropdown-item edit-reply-btn hover:bg-gray-100">Edit</button>
+                                        <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 dropdown-item edit-reply-btn hover:bg-gray-100">Ubah</button>
                                     </li>
                                     <li>
-                                        <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 dropdown-item hover:bg-gray-100 delete-reply-btn">Delete</button>
+                                        <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 dropdown-item hover:bg-gray-100 delete-reply-btn">Hapus</button>
                                     </li>
                                 </ul>
                             </div>
