--- a/forum/templates/forum_posts.html
+++ b/forum/templates/forum_posts.html
@@ -10,11 +10,10 @@
             <div class="flex flex-col min-h-screen py-4 space-y-4">
                 {% if user_role == "buyer" %}
                     <a href="{% url 'forum:create_forum_post' product.id %}"
-                       class="w-full px-4 py-2 text-base font-semibold text-white bg-[#b85c2c] hover:bg-[#f09027] border border-transparent rounded-md shadow-sm">Create a post</a>
-                    <div class="border border-gray-200"></div>
+                       class="w-full px-4 py-2 text-base font-semibold text-white bg-[#b85c2c] hover:bg-[#f09027] border border-transparent rounded-md shadow-sm">Buat diskusi baru</a>
                 {% endif %}
                 {% if not posts %}
-                    <div class="flex flex-col items-center justify-center flex-grow space-y-8 rounded-lg">
+                    <div class="flex flex-col items-center justify-center flex-grow space-y-8 rounded-lg forum-post">
                         <svg class="w-20"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
@@ -32,15 +31,15 @@
                             </g>
                             </g>
                         </svg>
-                        <h3 class="font-sans text-xl font-semibold text-gray-200">tidak ada balasan</h3>
+                        <h3 class="font-sans text-xl font-semibold text-gray-200">Belum ada diskusi</h3>
                     </div>
                 {% else %}
                     {% for post in posts %}
                         <div class="p-4 bg-white border border-gray-200 rounded-md hover:bg-gray-50">
                             <h6 class="flex items-center mb-2 text-xs text-gray-500">
-                                <span>Posted by {{ post.user }}</span>
+                                <span>Diposting oleh {{ post.user }}</span>
                                 <span class="mx-1">•</span>
-                                <span>{{ post.created_at|date:"d-m-Y" }}</span>
+                                <span class="forum-post-date">{{ post.created_at|date:"d-m-Y" }}</span>
                             </h6>
                             <div class="mb-4 space-y-2">
                                 <h3 class="text-lg font-semibold">{{ post.title }}</h3>
@@ -63,7 +62,7 @@
                                         </path>
                                         </g>
                                     </svg>
-                                    <span class="text-sm">Replies</span>
+                                    <span class="text-sm">Balasan</span>
                                 </a>
                                 {% if user.username == post.user.username %}
                                     <div class="relative">
@@ -81,11 +80,11 @@
                                         <ul class="absolute right-0 z-10 hidden w-40 mt-2 bg-white rounded-md shadow-lg dropdown-menu">
                                             <li>
                                                 <a href="{% url 'forum:edit_forum_post' product.id post.id %}"
-                                                   class="block px-4 py-2 text-sm text-gray-700 dropdown-item hover:bg-gray-100">Edit</a>
+                                                   class="block px-4 py-2 text-sm text-gray-700 dropdown-item hover:bg-gray-100">Ubah</a>
                                             </li>
                                             <li>
                                                 <a href="{% url 'forum:delete_forum_post' product.id post.id %}"
-                                                   class="block px-4 py-2 text-sm text-gray-700 dropdown-item hover:bg-gray-100">Delete</a>
+                                                   class="block px-4 py-2 text-sm text-gray-700 dropdown-item hover:bg-gray-100">Hapus</a>
                                             </li>
                                         </ul>
                                     </div>
